--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ms_outlook_calendar
+name: ms_outlook_calender
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
