--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,13 +44,14 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.sqgc.ms_outlook_calendar"
+        applicationId "com.sqgc.ms_outlook_calender"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 21
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        //manifestPlaceholders = [auth0Domain: "com.sqgc.ms_outlook_calender", auth0Scheme: "com.sqgc.ms_outlook_calender"]
     }
 
     buildTypes {
@@ -68,4 +69,14 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.microsoft.identity.client:msal:3.0.+"
+}
+
+allprojects {
+    repositories {
+        mavenCentral()
+        maven {
+            url 'https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1'
+        }
+    }
 }
