--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sqgc.ms_outlook_calendar">
+    package="com.sqgc.ms_outlook_calender">
    <application
-        android:label="ms_outlook_calendar"
+        android:label="ms_outlook_calender"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -30,12 +30,16 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-       <activity android:name="com.linusu.flutter_web_auth_2.CallbackActivity" android:exported="true">
-           <intent-filter android:label="flutter_web_auth_2">
+
+       <activity android:name="com.microsoft.identity.client.BrowserTabActivity">
+           <intent-filter>
                <action android:name="android.intent.action.VIEW" />
                <category android:name="android.intent.category.DEFAULT" />
                <category android:name="android.intent.category.BROWSABLE" />
-               <data android:scheme="com.sqgc.ms_outlook_calendar" /> <!-- This must correspond to the custom scheme used for instantiatng the client... See below -->
+               <data
+                   android:host="com.sqgc.ms_outlook_calender"
+                   android:path="/7pcQFSNR9h5ruIgVBMyx9p/sniI="
+                   android:scheme="msauth" />
            </intent-filter>
        </activity>
     </application>
