--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sqgc.ms_outlook_calender">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
    <application
         android:label="ms_outlook_calender"
         android:name="${applicationName}"
@@ -31,8 +34,20 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-       <activity android:name="com.microsoft.identity.client.BrowserTabActivity">
+       <!--<activity android:name="com.microsoft.identity.client.BrowserTabActivity">
            <intent-filter>
+               <action android:name="android.intent.action.VIEW" />
+               <category android:name="android.intent.category.DEFAULT" />
+               <category android:name="android.intent.category.BROWSABLE" />
+               <data
+                   android:host="com.sqgc.ms_outlook_calender"
+                   android:path="/7pcQFSNR9h5ruIgVBMyx9p/sniI="
+                   android:scheme="msauth" />
+           </intent-filter>
+       </activity>-->
+
+       <activity android:name="com.linusu.flutter_web_auth_2.CallbackActivity" android:exported="true">
+           <intent-filter android:label="flutter_web_auth_2">
                <action android:name="android.intent.action.VIEW" />
                <category android:name="android.intent.category.DEFAULT" />
                <category android:name="android.intent.category.BROWSABLE" />
