--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   oauth2_client:
+  dio:
+  intl:
+  get_it:
+  injectable:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
